// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`diskMapper - no data 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "Device",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "Label",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "Mount point",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "Type",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "expandable": true,
  "rows": Array [],
}
`;

exports[`diskMapper 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "Device",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "Label",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "Mount point",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "Type",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "expandable": true,
  "rows": Array [
    Object {
      "cells": Array [
        "device",
        "label",
        "mount",
        "type",
      ],
      "child": <div>
        test=data
      </div>,
      "isOpen": false,
    },
  ],
}
`;

exports[`diskMapper with values 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "Device",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "Label",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "Mount point",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "Type",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "expandable": true,
  "rows": Array [
    Object {
      "cells": Array [
        "device",
        Object {
          "value": "label",
        },
        "mount",
        "type",
      ],
      "child": <div>
        test=data
      </div>,
      "isOpen": false,
    },
  ],
}
`;

exports[`generalMapper - no data 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "filters": Array [
    Object {
      "type": "textual",
    },
  ],
  "rows": Array [],
}
`;

exports[`generalMapper 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "test",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "filters": Array [
    Object {
      "type": "textual",
    },
  ],
  "rows": Array [
    Array [
      "one",
    ],
    Array [
      "two",
    ],
  ],
}
`;

exports[`interfaceMapper - no data 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "MAC address",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "MTU",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "Name",
      "transforms": Array [
        [Function],
      ],
    },
    "State",
    Object {
      "title": "Type",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "rows": Array [],
}
`;

exports[`interfaceMapper 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "MAC address",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "MTU",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "Name",
      "transforms": Array [
        [Function],
      ],
    },
    "State",
    Object {
      "title": "Type",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "rows": Array [
    Array [
      "test-mac",
      "test-mtu",
      "test-name",
      Object {
        "title": <OutlinedArrowAltCircleUpIcon
          className="ins-c-inventory__detail--up"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
      "test-type",
    ],
    Array [
      "test-mac2",
      "test-mtu2",
      "test-name2",
      Object {
        "title": <OutlinedArrowAltCircleDownIcon
          className="ins-c-inventory__detail--down"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
      "test-type2",
    ],
    Array [
      "test-mac2",
      "test-mtu2",
      "test-name2",
      Object {
        "title": <OutlinedQuestionCircleIcon
          className="ins-c-inventory__detail--unknown"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
      "test-type2",
    ],
  ],
}
`;

exports[`productsMapper - no data 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "Name",
      "transforms": Array [
        [Function],
      ],
    },
    "Status",
  ],
  "rows": Array [],
}
`;

exports[`productsMapper 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "Name",
      "transforms": Array [
        [Function],
      ],
    },
    "Status",
  ],
  "rows": Array [
    Array [
      "test-name",
      Object {
        "title": <OutlinedQuestionCircleIcon
          className="ins-c-inventory__detail--unknown"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
    ],
    Array [
      "test-name",
      Object {
        "title": <OutlinedQuestionCircleIcon
          className="ins-c-inventory__detail--unknown"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
    ],
    Array [
      "test-name",
      Object {
        "title": <OutlinedQuestionCircleIcon
          className="ins-c-inventory__detail--unknown"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
    ],
  ],
}
`;

exports[`repositoriesMapper - no data 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "Name",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "Enabled",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "GPG check",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "filters": Array [
    Object {
      "type": "textual",
    },
    Object {
      "options": Array [
        Object {
          "label": "Is enabled",
          "value": "true",
        },
        Object {
          "label": "Not enabled",
          "value": "false",
        },
      ],
      "type": "checkbox",
    },
    Object {
      "options": Array [
        Object {
          "label": "Is enabled",
          "value": "true",
        },
        Object {
          "label": "Not enabled",
          "value": "false",
        },
      ],
      "type": "checkbox",
    },
  ],
  "rows": Array [],
}
`;

exports[`repositoriesMapper 1`] = `
Object {
  "cells": Array [
    Object {
      "title": "Name",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "Enabled",
      "transforms": Array [
        [Function],
      ],
    },
    Object {
      "title": "GPG check",
      "transforms": Array [
        [Function],
      ],
    },
  ],
  "filters": Array [
    Object {
      "type": "textual",
    },
    Object {
      "options": Array [
        Object {
          "label": "Is enabled",
          "value": "true",
        },
        Object {
          "label": "Not enabled",
          "value": "false",
        },
      ],
      "type": "checkbox",
    },
    Object {
      "options": Array [
        Object {
          "label": "Is enabled",
          "value": "true",
        },
        Object {
          "label": "Not enabled",
          "value": "false",
        },
      ],
      "type": "checkbox",
    },
  ],
  "rows": Array [
    Array [
      Object {
        "sortValue": "test-name",
        "title": <a
          href="test-url"
          rel="noopener noreferrer"
          target="_blank"
        >
          test-name
        </a>,
      },
      Object {
        "sortValue": "true",
        "title": <CheckCircleIcon
          className="ins-c-inventory__detail--enabled"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
      Object {
        "sortValue": "false",
        "title": <TimesIcon
          className="ins-c-inventory__detail--disabled"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
    ],
    Array [
      Object {
        "sortValue": "test-name",
        "title": <a
          href="test-url"
          rel="noopener noreferrer"
          target="_blank"
        >
          test-name
        </a>,
      },
      Object {
        "sortValue": "true",
        "title": <CheckCircleIcon
          className="ins-c-inventory__detail--enabled"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
      Object {
        "sortValue": "true",
        "title": <CheckCircleIcon
          className="ins-c-inventory__detail--enabled"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
    ],
    Array [
      Object {
        "sortValue": "test-name",
        "title": <a
          href="test-url"
          rel="noopener noreferrer"
          target="_blank"
        >
          test-name
        </a>,
      },
      Object {
        "sortValue": "false",
        "title": <TimesIcon
          className="ins-c-inventory__detail--disabled"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
      Object {
        "sortValue": "false",
        "title": <TimesIcon
          className="ins-c-inventory__detail--disabled"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
    ],
    Array [
      Object {
        "sortValue": "test-name",
        "title": <a
          href="test-url"
          rel="noopener noreferrer"
          target="_blank"
        >
          test-name
        </a>,
      },
      Object {
        "sortValue": "undefined",
        "title": <TimesIcon
          className="ins-c-inventory__detail--disabled"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
      Object {
        "sortValue": "false",
        "title": <TimesIcon
          className="ins-c-inventory__detail--disabled"
          color="currentColor"
          noVerticalAlign={false}
          size="sm"
        />,
      },
    ],
  ],
}
`;

exports[`should return DOWN 1`] = `
<svg
  aria-hidden={true}
  aria-labelledby={null}
  className="ins-c-inventory__detail--down"
  fill="currentColor"
  height="1em"
  role="img"
  style={
    Object {
      "verticalAlign": "-0.125em",
    }
  }
  viewBox="0 0 512 512"
  width="1em"
>
  <path
    d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z"
    transform=""
  />
</svg>
`;

exports[`should return UP 1`] = `
<svg
  aria-hidden={true}
  aria-labelledby={null}
  className="ins-c-inventory__detail--up"
  fill="currentColor"
  height="1em"
  role="img"
  style={
    Object {
      "verticalAlign": "-0.125em",
    }
  }
  viewBox="0 0 512 512"
  width="1em"
>
  <path
    d="M256 504c137 0 248-111 248-248S393 8 256 8 8 119 8 256s111 248 248 248zm0-448c110.5 0 200 89.5 200 200s-89.5 200-200 200S56 366.5 56 256 145.5 56 256 56zm20 328h-40c-6.6 0-12-5.4-12-12V256h-67c-10.7 0-16-12.9-8.5-20.5l99-99c4.7-4.7 12.3-4.7 17 0l99 99c7.6 7.6 2.2 20.5-8.5 20.5h-67v116c0 6.6-5.4 12-12 12z"
    transform=""
  />
</svg>
`;

exports[`should return false 1`] = `
<svg
  aria-hidden={true}
  aria-labelledby={null}
  className="ins-c-inventory__detail--disabled"
  fill="currentColor"
  height="1em"
  role="img"
  style={
    Object {
      "verticalAlign": "-0.125em",
    }
  }
  viewBox="0 0 352 512"
  width="1em"
>
  <path
    d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
    transform=""
  />
</svg>
`;

exports[`should return true 1`] = `
<svg
  aria-hidden={true}
  aria-labelledby={null}
  className="ins-c-inventory__detail--enabled"
  fill="currentColor"
  height="1em"
  role="img"
  style={
    Object {
      "verticalAlign": "-0.125em",
    }
  }
  viewBox="0 0 512 512"
  width="1em"
>
  <path
    d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"
    transform=""
  />
</svg>
`;
